Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ To run Wessim, Python 2.7 or later is required. To install Python, go to <a href
 </code></pre>
 </li>
 <li>
-<strong>Target region information</strong>: Target regions can be specified by two different ways. 
+<strong>Target region information</strong>: Target regions can be specified by two different ways.
 
 <ol>
 <li>
@@ -81,7 +81,7 @@ To run Wessim, Python 2.7 or later is required. To install Python, go to <a href
 </li>
 </ul><h3>Running Wessim</h3>
 
-<p>There are two main scripts in the package - Wessim1.py and Wessim2.py. You will use Wessim1 if you are using a BED file for target regions (ideal target approach). If you have probe sequences, use Wessim2. Two other scripts that start with 'Prep' are used to preparing Wessim2 inputs. You can ignore remaining scripts that start with '__sub'; main Wessim programs will execute these sub scripts automatically.</p>
+<p>There are two main scripts in the package - Wessim1.py and Wessim2.py. You will use Wessim1 if you are using a BED file for target regions (ideal target approach). However,  it is highly recommended to use Wessim2 (probe hybridization approach) when the probe sequence is available; it is much more realistic and recovers the statistics of real data. Two other scripts that start with 'Prep' are used to preparing Wessim2 inputs. You can ignore remaining scripts that start with '__sub'; main Wessim programs will execute these sub scripts automatically.</p>
 
 <p>The basic synopsis of Wessim1 is like below:</p>
 
