Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ To run Wessim, Python 2.7 or later is required. To install Python, go to <a href
 # Establish your local blat server
 &gt;gfServer start -canStop localhost 6666 ref.2bit
 # Run blat search to generate the match list
-&gt;python Prep_BlatSearch.py ref.2bit probe.txt.fa probe.txt.fa.psl
+&gt;python Prep_BlatSearch.py -R ref.2bit -P probe.txt.fa -o probe.txt.fa.psl
 # Run Wessim2 in probe hybridization mode.
 &gt;python Wessim2.py -R ref.fa -P probe.txt.fa -B probe_match.txt.fa.psl -n 1000000 -l 76 -M model.gzip -pz -o result
 </code></pre>
