Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@ To run Wessim, Python 2.7 or later is required. To install Python, go to <a href
 <p>The format of a tab-delimited .meta file is like below,</p>
 
 <pre><code>
-genome1.fasta  abundance of genome1
-genome2.fasta  abundance of genome2
+genome1.fasta  abundance_of_genome1
+genome2.fasta  abundance_of_genome2
 ...
-genomeN.fasta  abundance of genomeN
+genomeN.fasta  abundance_of_genomeN
 </code></pre>
 
 <p>For example, you can use,</p>
