Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ To run Wessim, Python 2.7 or later is required. To install Python, go to <a href
 <li>
 <strong>pysam</strong> library: go to <a href="http://code.google.com/p/pysam/">http://code.google.com/p/pysam/</a> to install pysam</li>
 <li>
-<strong>numpy</strong> library: go to <a href="http://numpy.scipy.org/">http://numpy.scipy.org/</a> to install numpy</li>
+<strong>numpy</strong> library: go to <a href="http://www.numpy.org/">http://www.numpy.org/</a> to install numpy</li>
 <li>
 <strong>gfServer</strong> and <strong>gfClient</strong>: In probe hybridization mode, Wessim runs more than 100,000 queries against the reference genome. This essentially requires a local blat server. gfServer and gfClient are pre-compiled programs for establishing private blat server on your computer. go to <a href="http://hgdownload.cse.ucsc.edu/admin/exe/">http://hgdownload.cse.ucsc.edu/admin/exe/</a> to download gfServer and gfClient (and set your local path to access the two programs anywhere). For more details about the tools, please refer to <a href="http://genome.ucsc.edu/FAQ/FAQblat.html#blat5">http://genome.ucsc.edu/FAQ/FAQblat.html#blat5</a>
 </li>
@@ -182,7 +182,7 @@ Output options:
           </script>
           <script type="text/javascript">
             try {
-              var pageTracker = _gat._getTracker("rachmani");
+              var pageTracker = _gat._getTracker("UA-7224540-4");
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
