Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ To run Wessim, Python 2.7 or later is required. To install Python, go to <a href
 # Generate a FASTA file of probe sequence
 &gt;python Prep_Probe2Fa.py probe.txt (this generates probe.txt.fa)
 # Establish your local blat server
-&gt;gfServer start -canStop localhost 6666 ref.2bit
+&gt;gfServer start -canStop localhost 6666 ref.2bit (this will consume one whole thread, you need to use a separated thread to continue the following steps)
 # Run blat search to generate the match list
-&gt;python Prep_BlatSearch.py -R ref.2bit -P probe.txt.fa -o probe.txt.fa.psl
+&gt;python Prep_BlatSearch.py -R ref.2bit -P probe.txt.fa -o probe.txt.fa.psl (Note that the path to ref.2bit is not based on your local machine. It should be used without path, because the gfServer has it in its root)
 # Run Wessim2 in probe hybridization mode.
 &gt;python Wessim2.py -R ref.fa -P probe.txt.fa -B probe_match.txt.fa.psl -n 1000000 -l 76 -M model.gzip -pz -o result
 </code></pre>
